appId: com.andezdev.test.maestro
tags:
  - sign-in
env:
    USERNAME: "Test User"
    PASSWORD: Test123456
---
- launchApp:
      appId: com.andezdev.test.maestro

- runFlow:
      file: subflow/expo-build-accept-dev-client.yaml

# tap on username
- tapOn:
      id: "usernameInput"
# enter username
- inputText: ${USERNAME}
# hides keyboard
- hideKeyboard
# tap on password
- tapOn:
      id: "passwordInput"
# enter password
- inputText: ${PASSWORD}
# hides keyboard
- hideKeyboard
# tap on sign in
- tapOn:
      id: "signInButton"
- assertVisible: "Sign in successfully"